// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader default renders correctly 1`] = `
<DocumentFragment>
  <section
    class="section"
  >
    <div
      class="container author-container"
    >
      <div
        class="level mb-2"
      >
        <div
          class="level-left"
        >
          <div
            class="level-item"
          >
            <p>
              Published: 
              <time>
                March 28, 2000
              </time>
            </p>
          </div>
        </div>
        <div
          class="level-right"
        >
          <div
            class="level-item"
          >
            <a
              class="post-tag"
              href="/blog?tag=one"
            >
              one
            </a>
            <a
              class="post-tag"
              href="/blog?tag=two"
            >
              two
            </a>
            <a
              class="post-tag"
              href="/blog?tag=three"
            >
              three
            </a>
          </div>
        </div>
      </div>
      <div
        class="media p-2 m-2"
      >
        <figure
          class="media-left ml-0 mb-0"
        >
          <img
            alt="author image"
            placeholder="blurred"
            src="../../images/icon.png"
          />
        </figure>
        <div
          class="media-content m-auto"
        >
          <div
            class="content"
          >
            <p>
              <strong>
                Luke Skywalker
              </strong>
              <br />
              Let's save the galaxy one more time!
            </p>
          </div>
        </div>
      </div>
      <div
        class="level my-3"
      >
        <div
          class="level-left"
        >
          <div
            class="level-item"
          >
            <li
              class="faicon-link-container"
            >
              <a
                aria-label="social media link"
                class="faicon-link with-label is-black"
                data-cy="faicon-link"
                href="/blog/blog-post-before"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-left fa-xl icon"
                  data-icon="arrow-left"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Before - A Blog About Things
                </span>
              </a>
            </li>
          </div>
        </div>
        <div
          class="level-right"
        >
          <div
            class="level-item"
          >
            <li
              class="faicon-link-container"
            >
              <a
                aria-label="social media link"
                class="faicon-link with-label is-black"
                data-cy="faicon-link"
                href="/blog/blog-post-before"
              >
                <span>
                  Next - A Blog About Things
                </span>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-right fa-xl icon"
                  data-icon="arrow-right"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </li>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`PageHeader renders when previousPost is defined 1`] = `
<DocumentFragment>
  <section
    class="section"
  >
    <div
      class="container author-container"
    >
      <div
        class="level mb-2"
      >
        <div
          class="level-left"
        >
          <div
            class="level-item"
          >
            <p>
              Published: 
              <time>
                March 28, 2000
              </time>
            </p>
          </div>
        </div>
        <div
          class="level-right"
        >
          <div
            class="level-item"
          >
            <a
              class="post-tag"
              href="/blog?tag=one"
            >
              one
            </a>
            <a
              class="post-tag"
              href="/blog?tag=two"
            >
              two
            </a>
            <a
              class="post-tag"
              href="/blog?tag=three"
            >
              three
            </a>
          </div>
        </div>
      </div>
      <div
        class="media p-2 m-2"
      >
        <figure
          class="media-left ml-0 mb-0"
        >
          <img
            alt="author image"
            placeholder="blurred"
            src="../../images/icon.png"
          />
        </figure>
        <div
          class="media-content m-auto"
        >
          <div
            class="content"
          >
            <p>
              <strong>
                Luke Skywalker
              </strong>
              <br />
              Let's save the galaxy one more time!
            </p>
          </div>
        </div>
      </div>
      <div
        class="level my-3"
      >
        <div
          class="level-left"
        >
          <div
            class="level-item"
          />
        </div>
        <div
          class="level-right"
        >
          <div
            class="level-item"
          />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`PageHeader renders when previousPost is undefined 1`] = `
<DocumentFragment>
  <section
    class="section"
  >
    <div
      class="container author-container"
    >
      <div
        class="level mb-2"
      >
        <div
          class="level-left"
        >
          <div
            class="level-item"
          >
            <p>
              Published: 
              <time>
                March 28, 2000
              </time>
            </p>
          </div>
        </div>
        <div
          class="level-right"
        >
          <div
            class="level-item"
          >
            <a
              class="post-tag"
              href="/blog?tag=one"
            >
              one
            </a>
            <a
              class="post-tag"
              href="/blog?tag=two"
            >
              two
            </a>
            <a
              class="post-tag"
              href="/blog?tag=three"
            >
              three
            </a>
          </div>
        </div>
      </div>
      <div
        class="media p-2 m-2"
      >
        <figure
          class="media-left ml-0 mb-0"
        >
          <img
            alt="author image"
            placeholder="blurred"
            src="../../images/icon.png"
          />
        </figure>
        <div
          class="media-content m-auto"
        >
          <div
            class="content"
          >
            <p>
              <strong>
                Luke Skywalker
              </strong>
              <br />
              Let's save the galaxy one more time!
            </p>
          </div>
        </div>
      </div>
      <div
        class="level my-3"
      >
        <div
          class="level-left"
        >
          <div
            class="level-item"
          />
        </div>
        <div
          class="level-right"
        >
          <div
            class="level-item"
          >
            <li
              class="faicon-link-container"
            >
              <a
                aria-label="social media link"
                class="faicon-link with-label is-black"
                data-cy="faicon-link"
                href="/blog/blog-post-before"
              >
                <span>
                  Next - A Blog About Things
                </span>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-right fa-xl icon"
                  data-icon="arrow-right"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </li>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
